Tidying and formatting webmap script
- adding Typer help and defaults
- adding code to generate colours and breakpoints for map
- formatting

--- a/src/templates/maplibre_template.html
+++ b/src/templates/maplibre_template.html
@@ -43,12 +43,7 @@
                 'fill-color': ['interpolate',
                     ['linear'],
                     ['get', 'gvi_score'],
-                    {{ gvi_min }}, 
-                    '#d8b365',
-                    {{ gvi_mean}}, 
-                    '#f5f5f5',
-                    {{ gvi_max }},
-                    '#5ab4ac'
+                    {{ interpolation_values }}
                 ],
                 'fill-outline-color': 'grey',
                 'fill-opacity': 0.75
