--- a/src/templates/maplibre_template.html
+++ b/src/templates/maplibre_template.html
@@ -9,10 +9,45 @@
     <style>
         body { margin: 0; padding: 0; }
         html, body, #map { height: 100%; }
+        .maplibregl-popup {
+            max-width: 400px;
+            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        }
+        .legend {
+            background-color: #fff;
+            border-radius: 3px;
+            bottom: 30px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+            color: #000 ;
+            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+            padding: 10px;
+            position: absolute;
+            right: 10px;
+            z-index: 1;
+            }
+
+        .legend h4 {
+          margin: 0 0 10px;
+        }
+
+        .legend div span {
+          border-radius: 50%;
+          display: inline-block;
+          height: 10px;
+          margin-right: 5px;
+          width: 10px;
+        }
 
     </style>
 </head>
 <body>
+    <div id="state-legend" class="legend"> 
+      <h4>Mean GVI score</h4>
+        <div><span style="background-color: {{ legend_patch_1  }}"></span>{{ legend_label_1}}</div>
+        <div><span style="background-color: {{ legend_patch_2  }}"></span>{{ legend_label_2}}</div>
+        <div><span style="background-color: {{ legend_patch_3  }}"></span>{{ legend_label_3}}</div>
+        <div><span style="background-color: {{ legend_patch_4  }}"></span>{{ legend_label_4}}</div>
+    </div>
 <div id="map"></div>
 <script>
     const bounds = [
