--- a/src/templates/maplibre_template.html
+++ b/src/templates/maplibre_template.html
@@ -56,7 +56,7 @@
     
     const map = new maplibregl.Map({
         container: 'map', // container id
-        {% if maptiler_api_key == 'None' -%}
+        {% if maptiler_api_key != 'None' -%}
         style: 'https://api.maptiler.com/maps/dataviz/style.json?key={{ maptiler_api_key }}', // style URL
         {% else -%}
         style: {version: 8,sources: {},layers: []}, // blank style URL
